Fixe horizontal scroll bug

--- a/frontend/css/queries.css
+++ b/frontend/css/queries.css
@@ -92,7 +92,7 @@ h4.module-header{
     border-top: none;
     box-shadow: 0 8px 6px -7px #e8e8e8;
     padding: 5px;
-    margin: 0px -2px -2px -6px;
+    margin: 0px;
 }
 
 .help-btn{
